--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-opencv-contrib-python==4.9.0.80
+opencv-python==4.9.0.80
 numpy==1.26.4
-streamlit==1.29.0 
+streamlit==1.29.0
+face-recognition==1.3.0 
